syntax = "proto3";

package collaboration;

option go_package = "./proto;collaboration";

service Collaboration {
	rpc CreateNewGroupWithAdmin(CreateGroupRequest) returns (IDResponse) {}
	rpc ModifyGroup(ModifyGroupRequest) returns (SuccessResponse) {}
	rpc GetGroupUserRole(GroupRequest) returns (GroupRoleResponse) {}
	rpc GetUserGroups(UserGroupsRequest) returns (UserGroupsResponse) {}
	rpc FindGroupByID(GroupRequest) returns (GroupResponse) {}
	rpc DeleteGroup(GroupRequest) returns (SuccessResponse) {}
}

enum GroupRole {
	READ = 0;
	WRITE = 1;
	ADMIN = 2;
}

message CreateGroupRequest {
	string userID = 1;
	string groupName = 2;
	bool isDefault = 3;
}

message ModifyGroupRequest {
	string userID = 1;
	string groupID = 2;
	optional string groupName = 3;
}

message GroupRequest {
	string userID = 1;
	string groupID = 2;
}

message UserGroupsRequest {
	string userID = 1;
}

message IDResponse {
	string ID = 1;
}

message SuccessResponse {
	bool success = 1;
}

message GroupRoleResponse {
	string groupID = 1;
	GroupRole groupRole = 2;
}

message GroupResponse {
	string groupID = 1;
	string groupName = 2;
}

message UserGroupsResponse {
	repeated Group groups = 1;
}

message Group {
	string groupName = 1;
	string groupID = 2;
	bool isDefault = 3;
}